# library

./: README.md  angular.json  package-lock.json  package.json
.github/workflows/: merge-bot.yml
src/: index.html  styles.scss
src-db/: .env  .gitignore  Cargo.toml
src-db/migrations/2023-01-10-040642_create_authors/: down.sql  up.sql
src-db/migrations/2023-01-10-041204_create_books/: up.sql
src-db/migrations/2023-01-10-041444_create_authors_books/: down.sql  up.sql
src-db/src/: lib.rs  schema.rs
src-db/src/models/: authors.rs  authors_books.rs  books.rs  mod.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.module.ts
src/app/author-fields/: author-fields.component.html  author-fields.component.spec.ts  author-fields.component.ts
src/app/book-fields/: book-fields.component.html  book-fields.component.spec.ts  book-fields.component.ts
src/app/classes/: Book.ts
src/app/core/models/: Author.ts  Book.ts
src/app/core/services/: author.service.ts  books.service.ts
src/app/home/: home-routing.module.ts  home.component.html  home.component.ts  home.module.ts
src/app/home/pages/add-book/: add-book.component.html  add-book.component.scss  add-book.component.ts
src/app/home/pages/edit-book/: edit-book.component.html  edit-book.component.ts
src/app/home/pages/inventory/: inventory.component.html  inventory.component.sass  (+1 more)
src/app/shared/: shared.module.ts
src/app/shared/models/: element.ts  selectedAuthor.ts
(+2 files in other folders)
